<resources>
    <string name="app_name">Pacman</string>
    <string name="points">Points:</string>
    <string name="move_right">Right</string>
    <string name="move_left">Left</string>
    <string name="move_up">Up</string>
    <string name="move_down">Down</string>
    <string name="newgame">New Game</string>
    <string name="counter">Time:</string>
    <string name="pauseResume">Pause</string>
    <string name="highscore">Highscore:</string>
    <string name="highscoreName">org.example.pacman.highscoreName</string>
    <string name="highscorePoints">org.example.pacman.highscorePoints</string>
    <string name="action_resetHighscore">Reset highscore</string>
</resources>
