<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="org.example.pacman.MainActivity">

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_red_light"
        android:orientation="horizontal">

        <Button
            android:id="@+id/moveLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_left" />

        <Button
            android:id="@+id/moveRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_right" />

        <Button
            android:id="@+id/moveUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_up" />

        <Button
            android:id="@+id/moveDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_down" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/textviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttons"
        android:background="@android:color/holo_red_light"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/highscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/highscore"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/counter"
            android:textSize="24sp" />

    </LinearLayout>


    <!-- This will be your gameview - notice that it is BELOW
      the buttons in the actual xml file, but the layout_above
      value is set to be above the buttons. This is because
      Android gives space to the layouts in the order they
      are specfied in the xml files, AND only then are they placed.
      -->
    <org.example.pacman.GameView
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/textviews">

    </org.example.pacman.GameView>

</RelativeLayout>
